2025-12-09  Morten Welinder <terra@gnome.org>

	* Release 1.14.54

2025-11-06  Morten Welinder  <terra@gnome.org>

	* gsf/gsf-msole-utils.c (msole_prop_read): Fix checks for reading
	past the end.  Fixes #41.

2024-10-01  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2024-09-30  Morten Welinder <terra@gnome.org>

	* Release 1.14.53

2024-09-26  Morten Welinder  <terra@gnome.org>

	* gsf/gsf-infile-msole.c (ole_init_info): Don't over-allocate for
	"seen_before".  A multiply should have been a divide.  At the same
	time, use a GByteArray instead of a raw pointer.  (We could use a
	bit array, but that's more work and we're already cutting the
	allocation down by 16384.)
	(ole_init_info): Range check num_blocks.

2024-08-31  Morten Welinder  <terra@gnome.org>

	* gsf/gsf-infile-msvba.c (vba_extract_module_source):
	force nul-termination of the data.

2024-02-04  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2024-02-04  Morten Welinder <terra@gnome.org>

	* Release 1.14.52

2023-11-02  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2023-11-02  Morten Welinder <terra@gnome.org>

	* Release 1.14.51

2023-04-22  Morten Welinder  <terra@gnome.org>

	* thumbnailer/main.c (msole_thumbnail): Fix crash.  #29.

2023-04-21  Morten Welinder  <terra@gnome.org>

	* thumbnailer/main.c (write_thumbnail): Plug leak.
	(read_thumbnail_and_write): Plug leak.

2022-07-13  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2022-07-13  Morten Welinder <terra@gnome.org>

	* Release 1.14.50

2022-03-20  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2022-03-20  Morten Welinder <terra@gnome.org>

	* Release 1.14.49

2021-12-27  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2021-12-27  Morten Welinder <terra@gnome.org>

	* Release 1.14.48

2021-12-02  Morten Welinder  <terra@gnome.org>
